--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </p>
 
     <div class="mx-auto my-2" style="max-width: 320px;">
-      <img src="Kaptan.jpg" alt="App Home Screenshot" class="img-fluid rounded shadow" style="object-fit: contain;">
+      <img src="kaptan.jpg" alt="App Home Screenshot" class="img-fluid rounded shadow" style="object-fit: contain;">
     </div>
   </section>
 
